# Nonogram-Puzzle-Game

./: .gitignore  README.md  bisect446515629.coverage  bisect495627176.coverage  bisect511281425.coverage  design.md  dune  dune-project  nonogram_web.ml  nonogram_web.opam
_coverage/: index.html
_coverage/src/: game.ml.html  generator.ml.html  puzzle.ml.html  solver.ml.html  validator.ml.html
src/: dune  game.ml  game.mli  generator.ml  generator.mli  grid.ml  grid.mli  position.ml  position.mli  puzzle.ml  puzzle.mli  solver.ml  solver.mli  ui.mli  validator.ml  validator.mli
tests/: dune  tests.ml  tests.mli
